# KNN_text_classifier

./: .gitignore  CMakeLists.txt  README.md
input/: Totti.txt
src/: CMakeLists.txt  main.cpp
src/Classifier/: CMakeLists.txt  Classifier.cpp  Classifier.hpp  CosineSimilarityClassifier.cpp  CosineSimilarityClassifier.hpp  EuclidianClassifier.cpp  EuclidianClassifier.hpp  ManhattanClassifier.cpp  ManhattanClassifier.hpp  MinkowskiClassifier.cpp  MinkowskiClassifier.hpp
src/Document/: CMakeLists.txt  Document.cpp  Document.hpp  Word.cpp  Word.hpp
src/Utility/: CLI.cpp  CLI.hpp  CMakeLists.txt  General.cpp  General.hpp
trainingSet/Anatomy/: Bone.txt  Organ.txt  Skeleton.txt
trainingSet/Astronomy/: Earth.txt  MilkyWay.txt  Sun.txt
trainingSet/Basketball/: Basketball.txt  KobeBryant.txt
trainingSet/Comicbook/: Comicbook.txt  Hulk.txt
trainingSet/Computer_Science/: GarbageCollection.txt  Python.txt
trainingSet/Cooking/: Chef.txt  Kitchen.txt
trainingSet/Electronics/: ElectronicCircuit.txt  Resistor.txt
trainingSet/Football/: DelPiero.txt  Football.txt  SerieA.txt
trainingSet/Geography/: Dublin.txt  Ireland.txt  Leinster.txt
trainingSet/Geology/: Geology.txt  Mineral.txt
trainingSet/Literature/: Dante.txt  DolceStilNovo.txt
trainingSet/Math/: CartesianCoordinate.txt  DotProduct.txt
trainingSet/Music/: HistoryOfMusic.txt  Music.txt
